# rules_closure

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  maven_rules_closure_install.json
.bcr/: config.yml  metadata.template.json  source.template.json
.github/workflows/: release.yaml  release_prep.sh
closure/: BUILD  defs.bzl  repositories.bzl  soy_build.patch  template.patch
closure/compiler/: BUILD  closure_base_js_library.bzl  closure_js_library.bzl
closure/compiler/test/: BUILD
closure/compiler/test/app/: BUILD.bazel  app.js  app.soy  index.css  index.html  main.js
closure/compiler/test/goog_es6_interop/: BUILD  person.js  person_factory.js  person_factory_test.js  string.js
closure/goog/: BUILD.bazel
closure/goog/a11y/aria/: BUILD
closure/goog/array/: BUILD
closure/goog/asserts/: BUILD
closure/goog/async/: BUILD
closure/goog/bootstrap/: BUILD
closure/goog/collections/: BUILD
closure/goog/color/: BUILD
closure/goog/crypt/: BUILD
closure/goog/cssom/: BUILD
closure/goog/cssom/iframe/: BUILD
closure/goog/date/: BUILD
closure/goog/db/: BUILD
closure/goog/debug/: BUILD
closure/goog/debug/devcss/: BUILD
closure/goog/delegate/: BUILD
closure/goog/disposable/: BUILD
closure/goog/dom/: BUILD  tagname.js
closure/goog/dom/animationframe/: BUILD
closure/goog/dom/browserrange/: BUILD
closure/goog/editor/: BUILD
closure/goog/editor/plugins/: BUILD
closure/goog/events/: BUILD
closure/goog/flags/: BUILD
closure/goog/format/: BUILD
closure/goog/fs/: BUILD
closure/goog/functions/: BUILD
closure/goog/fx/: BUILD
closure/goog/fx/anim/: BUILD
closure/goog/fx/css3/: BUILD
closure/goog/graphics/: BUILD
closure/goog/graphics/ext/: BUILD
closure/goog/history/: BUILD
closure/goog/html/: BUILD
closure/goog/html/sanitizer/: BUILD
closure/goog/i18n/: BUILD
closure/goog/i18n/uchar/: BUILD
closure/goog/iter/: BUILD
closure/goog/json/: BUILD
closure/goog/labs/dom/: BUILD
closure/goog/labs/events/: BUILD
closure/goog/labs/format/: BUILD
closure/goog/labs/mock/: BUILD
closure/goog/labs/net/: BUILD
closure/goog/labs/net/webchannel/: BUILD
closure/goog/labs/net/webchannel/testing/: BUILD
closure/goog/labs/pubsub/: BUILD
closure/goog/labs/storage/: BUILD
closure/goog/labs/structs/: BUILD
closure/goog/labs/style/: BUILD
closure/goog/labs/testing/: BUILD
closure/goog/labs/useragent/: BUILD
closure/goog/labs/useragent/highentropy/: BUILD
closure/goog/loader/: BUILD
closure/goog/locale/: BUILD
closure/goog/log/: BUILD
closure/goog/math/: BUILD
closure/goog/math/interpolator/: BUILD
closure/goog/memoize/: BUILD
closure/goog/messaging/: BUILD
closure/goog/messaging/testdata/: BUILD
closure/goog/module/: BUILD
closure/goog/module/testdata/: BUILD
closure/goog/net/: BUILD
closure/goog/net/rpc/: BUILD
closure/goog/net/streams/: BUILD
closure/goog/net/testdata/: BUILD
closure/goog/net/xpc/: BUILD
closure/goog/object/: BUILD
closure/goog/positioning/: BUILD
closure/goog/promise/: BUILD
closure/goog/proto/: BUILD
closure/goog/proto2/: BUILD
closure/goog/pubsub/: BUILD
closure/goog/reflect/: BUILD
closure/goog/singleton/: BUILD
closure/goog/soy/: BUILD
closure/goog/spell/: BUILD
closure/goog/stats/: BUILD
closure/goog/storage/: BUILD
closure/goog/storage/mechanism/: BUILD
closure/goog/streams/: BUILD
closure/goog/string/: BUILD
closure/goog/structs/: BUILD
closure/goog/style/: BUILD
closure/goog/testing/: BUILD
closure/goog/testing/async/: BUILD
closure/goog/testing/editor/: BUILD
closure/goog/testing/events/: BUILD
closure/goog/testing/fs/: BUILD
closure/goog/testing/i18n/: BUILD
closure/goog/testing/messaging/: BUILD
closure/goog/testing/net/: BUILD
closure/goog/testing/proto2/: BUILD
closure/goog/testing/storage/: BUILD
closure/goog/testing/style/: BUILD
closure/goog/testing/ui/: BUILD
closure/goog/timer/: BUILD
closure/goog/tweak/: BUILD
closure/goog/ui/: BUILD
closure/goog/ui/ac/: BUILD
closure/goog/ui/editor/: BUILD
closure/goog/ui/emoji/: BUILD
closure/goog/ui/media/: BUILD
closure/goog/ui/style/app/: BUILD
closure/goog/ui/tree/: BUILD
closure/goog/uri/: BUILD
closure/goog/url/: BUILD
closure/goog/useragent/: BUILD
closure/goog/vec/: BUILD
closure/goog/webgl/: BUILD
closure/goog/window/: BUILD
closure/private/: BUILD  base.js  defs.bzl
closure/protobuf/: BUILD.bazel  closure_js_proto_library.bzl  defs.bzl  jspb_shim.js  protobuf_js.BUILD
closure/protobuf/test/: BUILD
closure/protobuf/test/legacy/: BUILD  example_test.js
closure/stylesheets/: BUILD  closure_css_binary.bzl
closure/templates/: BUILD  closure_js_template_library.bzl  gbigint_shim.js  javascript-BUILD.patch  required_by_soy.js.patch  safevalues_shim.js  soy_jssrc.BUILD  soyutils_usegoog.js-gbigint.patch  soyutils_usegoog.js-safehtml.patch  soyutils_usegoog.js.patch
closure/testing/: BUILD  phantomjs_test.bzl  webdriver_test.bzl
closure/testing/test/: BUILD  dict_entry_point_test.js  lenient_test.js
closure/typescript/: closure_ts_library.bzl
closure/webfiles/: web_library.bzl  web_library_external.bzl
google3/javascript/apps/jspb/types/: BUILD.bazel  is_readonly.ts
google3/javascript/common/bigint/: BUILD.bazel  index.ts
google3/javascript/xid/: BUILD.bazel  xid.js
java/com/google/javascript/jscomp/: BUILD  Diagnostics.java  JsCheckerPassConfig.java  JsCompiler.java
java/io/bazel/rules/closure/: BUILD
java/io/bazel/rules/closure/http/: BUILD
java/io/bazel/rules/closure/http/filter/: BUILD
java/io/bazel/rules/closure/testing/: BUILD
java/io/bazel/rules/closure/webfiles/: BUILD  HasherInputStream.java  WebfilesWriter.java
java/io/bazel/rules/closure/worker/: BUILD
java/org/jsoup/nodes/: BUILD
javatests/com/google/javascript/jscomp/: BUILD
javatests/io/bazel/rules/closure/: BUILD
javatests/io/bazel/rules/closure/http/: BUILD
javatests/io/bazel/rules/closure/webfiles/: BUILD
javatests/io/bazel/rules/closure/worker/: BUILD
javatests/org/jsoup/nodes/: BUILD
(+8 files in other folders)
