module(
    name = "rules_closure",
    version = "0.0.0",
    compatibility_level = 1,
)

# -------------------------------------------------------------------
# Direct Dependencies
# -------------------------------------------------------------------

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "build_stack_rules_proto", version = "4.1.0")
bazel_dep(name = "com_google_closure_templates", version = "0.0.0")
bazel_dep(name = "google_bazel_common", version = "0.0.1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "protobuf_javascript", version = "0.0.0")
bazel_dep(name = "protobuf", version = "32.1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_java", version = "8.15.2")
bazel_dep(name = "rules_jvm_external", version = "6.8")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_python", version = "1.4.1")
bazel_dep(name = "rules_tsickle", version = "0.0.0")
bazel_dep(name = "rules_web_testing_java", version = "0.4.1", repo_name = "io_rules_web_testing_java")
bazel_dep(name = "rules_webtesting", version = "0.4.1", repo_name = "io_bazel_rules_webtesting")

# -------------------------------------------------------------------
# Overrides
# -------------------------------------------------------------------

local_path_override(
    module_name = "build_stack_rules_proto",
    path = "/Users/pcj/go/src/github.com/stackb/rules_proto",
)

# local_path_override(
#     module_name = "com_google_closure_templates",
#     path = "/Users/pcj/go/src/github.com/google/closure-templates",
# )

# https://github.com/google/closure-templates/pull/2594
archive_override(
    patches = [
        "//closure/templates:javascript-BUILD.patch",
        "//closure/templates:required_by_soy.js.patch",
        "//closure/templates:soyutils_usegoog.js.patch",
        "//closure/templates:soyutils_usegoog.js-gbigint.patch",
        "//closure/templates:soyutils_usegoog.js-safehtml.patch",
    ],
    patch_strip = 1,
    module_name = "com_google_closure_templates",
    sha256 = "32adea042dabfcc8347f425d0225a003e0a011d037e9065cbc79518284651017",
    strip_prefix = "closure-templates-a41a0fb1746f53a8a6d6920044df9810b128e722",
    urls = ["https://github.com/google/closure-templates/archive/a41a0fb1746f53a8a6d6920044df9810b128e722.tar.gz"],
)

# NOTE: remember to make a note about cannot upgrade past protobuf editions...
local_path_override(
    module_name = "protobuf_javascript",
    path = "/Users/pcj/go/src/github.com/protocolbuffers/protobuf-javascript",
)

# Release: v1.0.0
# TargetCommitish: main
# Date: 2025-10-06 18:09:34 +0000 UTC
# URL: https://github.com/stackb/rules_tsickle/releases/tag/v1.0.0
# Size: 291431 (291 kB)
archive_override(
    module_name = "rules_tsickle",
    sha256 = "28821257a547b124278581c7d1ba0c180e119a78d821182caee79355b87acf07",
    strip_prefix = "rules_tsickle-1.0.0",
    urls = ["https://github.com/stackb/rules_tsickle/archive/v1.0.0.tar.gz"],
)

# -------------------------------------------------------------------
# additional http dependencies
# -------------------------------------------------------------------

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "fonts_noto_mono_deb",
    sha256 = "71ff715cf50a74a8cc11b02e7c906b69a242d3d677e739e0b2d18cd23b7de375",
    urls = [
        "https://mirror.bazel.build/http.us.debian.org/debian/pool/main/f/fonts-noto/fonts-noto-mono_20161116-1_all.deb",
        "http://http.us.debian.org/debian/pool/main/f/fonts-noto/fonts-noto-mono_20161116-1_all.deb",
    ],
)

http_file(
    name = "libexpat_amd64_deb",
    sha256 = "682d2321297c56dec327770efa986d4bef43a5acb1a5528b3098e05652998fae",
    urls = [
        "https://mirror.bazel.build/http.us.debian.org/debian/pool/main/e/expat/libexpat1_2.1.0-6+deb8u3_amd64.deb",
        "http://http.us.debian.org/debian/pool/main/e/expat/libexpat1_2.1.0-6+deb8u3_amd64.deb",
    ],
)

http_file(
    name = "libpng_amd64_deb",
    sha256 = "a57b6d53169c67a7754719f4b742c96554a18f931ca5b9e0408fb6502bb77e80",
    urls = [
        "https://mirror.bazel.build/http.us.debian.org/debian/pool/main/libp/libpng/libpng12-0_1.2.50-2+deb8u2_amd64.deb",
        "http://http.us.debian.org/debian/pool/main/libp/libpng/libpng12-0_1.2.50-2+deb8u2_amd64.deb",
    ],
)

http_file(
    name = "libfontconfig_amd64_deb",
    sha256 = "0bb54d61c13aa5b5253cb5e08aaca0dfc4c626a05ee30f51d0e3002cda166fec",
    urls = [
        "https://mirror.bazel.build/http.us.debian.org/debian/pool/main/f/fontconfig/libfontconfig1_2.11.0-6.3+deb8u1_amd64.deb",
        "http://http.us.debian.org/debian/pool/main/f/fontconfig/libfontconfig1_2.11.0-6.3+deb8u1_amd64.deb",
    ],
)

http_file(
    name = "libfreetype_amd64_deb",
    sha256 = "80184d932f9b0acc130af081c60a2da114c7b1e7531c18c63174498fae47d862",
    urls = [
        "https://mirror.bazel.build/http.us.debian.org/debian/pool/main/f/freetype/libfreetype6_2.5.2-3+deb8u1_amd64.deb",
        "http://http.us.debian.org/debian/pool/main/f/freetype/libfreetype6_2.5.2-3+deb8u1_amd64.deb",
    ],
)

http_file(
    name = "fonts_noto_hinted_deb",
    sha256 = "a71fcee2bc7820fc4e0c780bb9c7c6db8364fd2c5bac20867c5c33eed470dc51",
    urls = [
        "https://mirror.bazel.build/http.us.debian.org/debian/pool/main/f/fonts-noto/fonts-noto-hinted_20161116-1_all.deb",
        "http://http.us.debian.org/debian/pool/main/f/fonts-noto/fonts-noto-hinted_20161116-1_all.deb",
    ],
)

platform_http_file = use_repo_rule("//closure/private:platform_http_file.bzl", "platform_http_file")

platform_http_file(
    name = "phantomjs",
    amd64_sha256 = "86dd9a4bf4aee45f1a84c9f61cf1947c1d6dce9b9e8d2a907105da7852460d2f",
    amd64_urls = [
        "https://mirror.bazel.build/bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2",
        "https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2",
    ],
    macos_sha256 = "538cf488219ab27e309eafc629e2bcee9976990fe90b1ec334f541779150f8c1",
    macos_urls = [
        "https://mirror.bazel.build/bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-macosx.zip",
        "https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-macosx.zip",
    ],
)

# -------------------------------------------------------------------
# maven configuration
# -------------------------------------------------------------------

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    artifacts = [
        "args4j:args4j:2.33",
        "com.google.closure-stylesheets:closure-stylesheets:1.5.0",
        "com.google.dagger:dagger-producers:2.43.2",
        "com.google.jimfs:jimfs:1.1",
        "net.java.dev.javacc:javacc:7.0.13",
        "org.jsoup:jsoup:1.16.1",
        "org.seleniumhq.selenium:selenium-remote-driver:4.27.0",
        "org.seleniumhq.selenium:selenium-api:4.27.0",
        "org.seleniumhq.selenium:selenium-support:4.27.0",
    ],
)

# Using maven.artifact here because the version number vxxxxx cannot parsed correctly.
maven.artifact(
    artifact = "closure-compiler",
    group = "com.google.javascript",
    version = "v20250402",
)

# javacc:javacc was not updated since 2008 and relocated to net.java.dev.javacc
maven.override(
    coordinates = "javacc:javacc",
    target = "@maven//:net_java_dev_javacc_javacc",
)

use_repo(maven, "maven")
